Bug 241608 - with big fontsize some tooltip information for some files/file types isn't displayed
Summary: with big fontsize some tooltip information for some files/file types isn't di...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 195460 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-13 04:27 UTC by Janet
Modified: 2010-09-28 17:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.2
Sentry Crash Report:


Attachments
tooltip-screenshots: only two show all information (148.54 KB, image/jpeg)
2010-06-13 04:27 UTC, Janet
Details
another screenshot, xcf of today - missing a lot of information (55.22 KB, image/jpeg)
2010-06-13 04:33 UTC, Janet
Details
screenshots of tooltips in 4.5.1 (112.91 KB, image/jpeg)
2010-09-25 21:26 UTC, Janet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-06-13 04:27:36 UTC
Created attachment 47965 [details]
tooltip-screenshots: only two show all information

Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

When I use an overall font size of 13 or more some information in the tooltips for files gets lost. Though there theroretically is enough space month, year, time is not displayed. Mostly is seems to concern zip archives and jpg files, but not all.

I'll attach a screenshot of some tooltips, with different missing information.

Reproducible: Sometimes




OS: Linux (i686) release 2.6.34-0.slh.8-sidux-686
Compiler: cc
KDE 4.4.4
Comment 1 Janet 2010-06-13 04:33:00 UTC
Created attachment 47966 [details]
another screenshot, xcf of today - missing a lot of information

Reproducable = "sometimes" shall mean it is not reproducable with every file and every file of a filetype. But for the affected files it is reproducable every time. Tested with font DejaVu Sans 13 und 14.
Comment 2 Christoph Feck 2010-06-13 13:36:13 UTC
Peter, the sizeHint calculation in the meta widget is completely broken, it assumes that everything fits into 200 pixels without taking width of labels into account. Is there a reason for the hardcoded width, or should I try a better version?
Comment 3 Peter Penz 2010-06-13 16:13:16 UTC
@Christoph: The hardcoded 200 pixels was a hack that was "needed" for an old version. I'm quite sure that it should be possible in the meantime, to do a more clever calculation now. If you want to give it a try, please go ahead :-) Otherwise I hope I'll find some time to check this myself...
Comment 4 Peter Penz 2010-07-08 16:52:20 UTC
SVN commit 1147525 by ppenz:

Don't use a hardcoded size of 200 for the width of the size hint, calculate the required width instead.

BUG: 241608



 M  +23 -14    kfilemetadatawidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1147525
Comment 5 Peter Penz 2010-07-08 16:55:05 UTC
SVN commit 1147528 by ppenz:

Forward port of SVN commit 1147525: Don't use a hardcoded size of 200 for the width of the size hint, calculate the required width instead.

CCBUG: 241608


 M  +23 -14    kfilemetadatawidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1147528
Comment 6 Peter Penz 2010-07-08 17:22:36 UTC
*** Bug 195460 has been marked as a duplicate of this bug. ***
Comment 7 Janet 2010-09-24 22:18:34 UTC
Fixed in KDE SC 4.6? As the tooltips still are not as they should be in 4.5.1, even in smaller text size some information sometimes is half swallowed up when the information needs two rows.
Comment 8 Christoph Feck 2010-09-25 17:14:44 UTC
The commit went to both trunk and the 4.5 branch, so it was intended to be fixed in 4.5.1. If the current result differs from the screen shots from comment #0 and comment #1 could you add a new screen shot?
Comment 9 Janet 2010-09-25 21:26:54 UTC
Created attachment 51988 [details]
screenshots of tooltips in 4.5.1

I've added some screenshots with font DejaVu size 10. For some files the tooltips show all information, for others not. The two jpg files are neighbours in the same folder as are the two svgz files.

I am using the KDE 4.5.1 version from Debian experimental-snapshots. Maybe there is something missing which is still used from 4.4.5? This idea just came to me but I don't know for which package I have to search. 
http://qt-kde.debian.net/debian/
Comment 10 Peter Penz 2010-09-27 16:12:09 UTC
I could reproduce it by turning on all meta-data for JPGs with 4.5.1 (*sigh*). Either a regression has been introduced by another commit or I simply did not test careful enough... Sorry, will try to fix this ASAP and backport.

(internal test-hint to reproduce: check data from 2010/09 September/)
Comment 11 Peter Penz 2010-09-27 16:59:59 UTC
Good news, I've found the root-cause. The kdelibs-fix from comment #4 works, but another tooltip-related fix in Dolphin that has been committed for 4.5.1 resulted in a regression that has not been noticed. I'll provide a fix this week and will backport it...
Comment 12 Janet 2010-09-27 17:52:20 UTC
Great! Thanks! :)
Comment 13 Peter Penz 2010-09-28 17:57:40 UTC
SVN commit 1180692 by ppenz:

Fix issue that tooltip-labels might get clipped (this regression has been introduced by revision 1158057)

BUG: 241608
FIXED-IN: 4.5.2


 M  +7 -1      filemetadatatooltip.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180692
Comment 14 Peter Penz 2010-09-28 17:58:06 UTC
SVN commit 1180693 by ppenz:

Fix issue that tooltip-labels might get clipped (this regression has been introduced by revision 1158057)

CCBUG: 241608



 M  +7 -1      filemetadatatooltip.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180693