Don't use a hardcoded size of 200 for the width of the size hint, calculate the required width instead.

BUG: 241608


svn path=/branches/KDE/4.5/kdelibs/; revision=1147525